--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,11 +15,14 @@
     <h1>Backlog Power Ups</h1>
   </header>
   <div id="app">
-    <section v-for="item in items">
-        <label>
-          <input type="checkbox" @change="change(item)" v-model="item.enabled"/>
-          <span>{{ item.text }}</span>
-        </label>
+    <section v-for="group in groups">
+        <h3>{{ group.text }}</h3>
+        <div class="items" v-for="item in group.items">
+          <label>
+            <input type="checkbox" @change="change(item)" v-model="item.enabled"/>
+            <span>{{ item.text }}</span>
+          </label>
+        </div>
     </section>
     <footer class="buttons">
       <button type="submit" @click="apply()" v-bind:disabled="isChanged() == false">{{ i18n.getMessage("popup_apply_button") }}</button>
