--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
-    <title>popup</title>
 </head>
-
 <body>
-<header>
-    <h1>Backlog Power Ups</h1>
-</header>
-<div id="app"></div>
-<script type="module" src="./index.ts"></script>
+    <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
